[package]
name = "winhook-rs"
version = "0.1.0"
edition = "2021"
authors = ["sn99 <siddharthn.099@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.43.0", features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_Debug"] }
